<resources>
    <string name="app_name">xoYou Pro</string>
    <string name="default_progress">0%</string>
    <string name="dream">꿈</string>
    <string name="title_forme">나를 위한 사람들</string>
    <string name="title_with">함께라면</string>
    <string name="title_promise">나만을 위한약속</string>
    <string name="title_mylife">나의 생활</string>
    <string name="title_manage">몽매니저</string>
    <string name="title_home">꿈등록</string>
    <string name="title_store">스토어</string>
    <string name="title_find">나의운</string>
    <string name="title_recommend">Recommend</string>
    <string name="str_success">완료</string>
    <string name="str_cofirm">확인</string>
    <string name="str_cancel">취소</string>
    <string name="str_update">업데이트</string>
    <string name="str_logout">로그아웃 하시겠습니까?</string>
    <string name="str_version_check_dialog_message">최신 버전이 존재합니다. 업데이트를 진행해주세요.</string>
    <string name="str_enroll">등록하기</string>
    <string name="error_login_text">로그인 정보가 만료되었습니다.\n다시 로그인을 시도해주세요.</string>
    <string name="str_network_error_retry_msg">연결이 지연되고 있습니다. \n\n와이파이 또는 모바일 데이터 \n 연결상태를 확인해주세요.</string>
    <string name="str_network_server_error">휴대전화의 와이파이나 통신망 등의\n네트워크 연결 상태가 불안정합니다.\n잠시 후 다시 시도 해주세요.</string>
    <string name="str_error">오류가 발생하였습니다. \n 잠시 후에 다시 시도해주세요.</string>
    <string name="password_valid">비밀번호는 영문, 숫자, 특수문자를 포함하여 8 ~ 20자로 입력해주세요.</string>
    <string name="main_keyword_input"><u>키워드 스타일 꿈 입력</u></string>
    <string name="activit_calendar_title">Calendar</string>
    <string name="activit_card_edit_title">꿈 바탕 이미지</string>
    <string name="activit_card_image_edit_title">꿈 바탕 이미지 만들기</string>
    <string name="activit_card_image_add_list">추가 이미지 리스트</string>
    <string name="activit_bid_title">상세정보</string>
    <string name="activit_tab_story">스토리 입력</string>
    <string name="str_guide_app_finish">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="home_tooltip1">마이몽은 </string>
    <string name="home_tooltip">님의 꿈을 분석하여 제공합니다.\n키워드 방식으로 꿈을 검색 후 분석 결과를 간단하게 제공되며, 보관되지 않습니다.\n스토리
                    방식은 꿈의 내용을 생각나는데로 입력하여 정밀하게 분석되며, 꿈을 보관하여 관리됩니다.</string>
    <string name="bid_error_empty_coin">보유 코인이 없습니다.</string>
    <string name="bid_error_buy">구매 실패</string>
    <string name="bid_error_buy_time_buy_invalid">판매기간이 종료되어 구매 할 수 없습니다.</string>
    <string name="bid_error_bid">입찰 실패</string>
    <string name="bid_error_buy_fail">구매중 오류가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="bid_error_bid_fail">입찰중 오류가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="add_location_tooltip">장소를 등록하면 _UserName님이 꾼 꿈과 장소와의 연관성을 분석할 수 있습니다.\n1) * 항목은 무도 입력하여야 등록됩니다.\n2) 충수 (지하: 음수, 지상: 양수) 미입력 시 1층으로 등록됩니다.</string>
    <string name="record_status0">음성 녹음하기</string>
    <string name="record_status1">음성 녹음중</string>
    <string name="play_status0">음성재생</string>
    <string name="play_status1">정지</string>
    <string name="txt_common_error_soon">서비스 준비중입니다.</string>
    <string name="txt_common_save">보관</string>
    <string name="txt_common_login_fail">비밀번호가 일치하지 않습니다.</string>
    <string name="txt_common_error_exception">오류가 발생했습니다.</string>
    <string name="mong_auth_price">꿈 추천금액 : </string>
    <string name="mong_auth_price_won">원</string>
    <string name="mong_auth_success">꿈 인증 완료</string>
    <string name="mong_auth_success_finish">인증등록이 완료되었습니다.</string>
    <string name="mong_auth_fail">인증등록에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="mong_regist_bg_select">꿈 바탕 이미지를 선택해 주세요!</string>
    <string name="mong_regist_error_essential">필수항목을 확인하세요!</string>
    <string name="mong_regist_record">음성녹음</string>
    <string name="mong_detail_tab_1_real">현실율: </string>
    <string name="mong_detail_tab_1_mong_type_1">흉몽</string>
    <string name="mong_detail_tab_1_mong_type_2">길몽</string>
    <string name="mong_detail_tab_1_mong_type_3">악몽</string>
    <string name="mong_detail_tab_1_mong_type_4">영몽</string>
    <string name="mong_detail_tab_3_category_1">영혼</string>
    <string name="mong_detail_tab_3_category_2">인간</string>
    <string name="mong_detail_tab_3_category_3">욕심</string>
    <string name="mong_detail_tab_3_category_4">정</string>
    <string name="mong_detail_tab_3_label_txt">] 은 꿈을 꾼 </string>
    <string name="mong_detail_tab_3_label_end_1">후가 강합니다.</string>
    <string name="mong_detail_tab_3_label_end_2">후가 약합니다.</string>
    <string name="mong_detail_tab_3_label_end_3">후와 같습니다.</string>
    <string name="mong_detail_tab_3_legend_label_1">꿈속에서 </string>
    <string name="mong_detail_tab_3_legend_label_2">꿈꾼 후의 </string>
    <string name="mong_email_auth">인증코드를 입력해 주세요.</string>
    <string name="mong_email_auth_error">인증번호가 일치하지 않습니다.</string>
    <string name="mong_email_find_id">이메일을 입력하세요.</string>
    <string name="mong_email_find_id_check">이메일을 확인해주세요.</string>
    <string name="mong_email_find_id_result">아이디 : </string>
    <string name="mong_email_find_id_pw_check">아이디와 이메일을 확인해주세요.</string>
    <string name="mong_email_find_pw_change">변경할 비밀번호를 입력해주세요.</string>
    <string name="mong_email_find_pw_error">비밀번호가 일치하지 않습니다.</string>
    <string name="mong_email_find_pw_change_success">비밀번호 변경 완료</string>
    <string name="mong_login_id_pw_input">아이디와 비밀번호를 입력해주세요.</string>
    <string name="mong_login_update_download">업데이트파일 다운로드중..</string>
    <string name="mong_login_update_download_error">파일을 다운받을 수 없습니다.</string>
    <string name="mong_signup_email">이메일 형식을 확인해주세요.</string>
    <string name="mong_signup_email_auth">인증번호를 입력하세요.</string>
    <string name="mong_signup_email_auth_success">이메일 인증 완료</string>
    <string name="mong_signup_error_essential">미입력 항목이 있습니다.</string>
    <string name="mong_signup_error_name">이름은 두 글자 이상 이여야 합니다.</string>
    <string name="mong_signup_error_pw">비밀번호가 일치하지않습니다.</string>
    <string name="mong_signup_error_essential_check">필수 동의사항을 체크해주세요.</string>
    <string name="mong_signup_error_id_dupl">중복된 아이디입니다.</string>
    <string name="mong_signup_error_id_pass">사용가능한 아이디입니다.</string>
    <string name="mong_signup_auth_code">인증코드 전송 완료</string>
    <string name="mong_signup_success">회원가입 완료</string>
    <string name="add_location_floor">층</string>
    <string name="add_location_change">장소(위치) 수정</string>
    <string name="add_location_change_btn">수정</string>
    <string name="add_location_input_addr">주소를 입력해주세요.</string>
    <string name="add_location_input_essential">입력사항을 모두 입력해주세요.</string>
    <string name="add_location_change_success">장소(위치) 수정이 완료되었습니다.</string>
    <string name="add_location_change_fail">장소(위치) 수정에 실패하였습니다.\n다시 시도 해주세요.</string>
    <string name="add_location_reg_success">장소등록이 완료 되었습니다.</string>
    <string name="add_location_reg_fail">장소등록에 실패하였습니다.\n다시 시도 해주세요.</string>
    <string name="add_relation_change_success">관계인 수정이 완료되었습니다.</string>
    <string name="add_relation_change_fail">관계인 수정에 실패하였습니다.\n다시 시도 해주세요.</string>
    <string name="add_relation_reg_success">관계인 등록이 완료되었습니다.</string>
    <string name="add_relation_reg_fail">관계인 등록에 실패하였습니다.\n다시 시도 해주세요.</string>
    <string name="add_relation_change">관계인 수정</string>
    <string name="add_user_change">사용자 수정</string>
    <string name="add_user_change_success">사용자 수정에 성공했습니다.</string>
    <string name="add_user_change_btn">수정</string>
    <string name="add_user_reg_success">사용자 등록에 성공했습니다.</string>
    <string name="family_load_fail">가족관계 불러오기에 실패했습니다.</string>
    <string name="family_refresh_success">갱신에 성공 했습니다.</string>
    <string name="family_refresh_fail">갱신에 실패 했습니다.</string>
    <string name="location_list_place_delete">장소를 삭제 하시겠습니까?</string>
    <string name="location_list_place_delete_success">장소삭제에 성공했습니다.</string>
    <string name="location_list_place_delete_fail">장소삭제 실패.\n잠시 후 다시 시도해주세요.</string>
    <string name="location_list_place_load_fail">장소가져오기 실패.\n잠시 후 다시 시도해주세요.</string>
    <string name="main_coin_update">코인 정보가 업데이트 되었습니다.</string>
    <string name="main_user_empty">등록된 사용자가 없습니다. 사용자를 등록해주세요.</string>
    <string name="mong_store_save_agree">1. 꿈을 보관하려면 월구독 가입이 되어야 됩니다.\n
2. 구독료에 따라 꿈보관의 수준이 다를 수 있습니다.\n
3. 보관된 꿈은 _userName님의 필요에 따라 언제든지 마이몽스토어를 통해 거래가 가능합니다.\n
4. 보관이나 등록을 하지 않고도 분석된 꿈을 볼 수 있습니다. 단 다시 볼 수는 없습니다.\n
5. 구독하지 않아도 관계인이나 장소등 관련 자료를 등록할 수 있습니다.\n
6. 보관된 꿈은 재생산하거나 별도 활용되지 않습니다.\n\n
꿈을 사고 판다는 것은 꿈을 꾼 _userName님의 기운을 사고 판다는 것을 의미합니다. 일반적으로 좋은 꿈이 좋다고 생각하지만
실제로는 어떤 꿈이라기 보다는 누가 어떤 꿈을 꾼것이 더 중요합니다. _userName님이 꿈을 통해 받은 기운을 거래하는 곳이 마이몽스토어 입니다.
_userName님의 기운이 많은 사람들에게 도움이 될 수 있도록 마이몽은 꿈을 분석하고 마이몽스토어와 연동하여 모든 일상 생활에 활력이 되도록 최선을 다하여 연구 개발하고 있습니다.\n\n
감사합니다. 마이몽 일동</string>
    <string name="mong_bid_constant_price">고정가</string>
    <string name="mong_bid_sell_price">판매가격:</string>
    <string name="mong_bid_auction">경매</string>
    <string name="mong_bid_action_start">시작가격:</string>
    <string name="mong_bid_sell_recommend_price">추천가격:</string>
    <string name="mong_bid_auth">인증</string>
    <string name="mong_bid_status_permission_not">권한없음</string>
    <string name="mong_bid_status_auth">인증하기</string>
    <string name="mong_bid_status_sell">판매하기</string>
    <string name="mong_bid_status_buy">구매하기</string>
    <string name="mong_bid_status_auction">입찰하기</string>
    <string name="mong_bid_auction_error_low">현재입찰가보다 낮습니다.</string>
    <string name="mong_bid_cartegory">영혼</string>
    <string name="mong_bid_result_text_1">해당꿈은 나에게 </string>
    <string name="mong_bid_result_text_2">운을 가져다 줍니다.</string>
    <string name="mong_bid_legend_1">꿈속에서 </string>
    <string name="mong_bid_legend_2">꿈꾼 후의 </string>
    <string name="mong_bid_year">년</string>
    <string name="mong_bid_month">월</string>
    <string name="mong_bid_day">일</string>
    <string name="mong_bid_my_coin">보유 코인</string>
    <string name="mong_relation_list_delete">관계인을 삭제 하시겠습니까?</string>
    <string name="mong_sell_price">판매가격</string>
    <string name="mong_sell_price_start">시작가격</string>
    <string name="regist_dialog2_0">인증등록비 내용</string>
    <string name="regist_dialog2_1">인증등록비 2,000원</string>
    <string name="regist_dialog2_2">1. 인증등록 비용은 결제 이후 결과가 만족하지 않을 시에는 돌려받을 수 있습니다.</string>
    <string name="regist_dialog2_3">2.인증등록 비용증 분석 신청에 따라 차감하여 환급합니다.</string>
    <string name="regist_dialog2_4">결제하기(테스트기간 무료)</string>
    <string name="regist_dialog2_5">잠깐! 생각좀 더해보고....</string>
    <string name="notice_layout_0">1.꿈을 보관하려면 월 구독 가입이 되어야 됩니다.
        \n2.구독료에따라 꿈보관의 수준이 다를 수 있습니다.
        \n3.보관된 꿈은 박홍진님의 필요에 따라 언제든지 마이몽스토어를 통해 거래가 가능합니다.
        \n4.꿈을 보관하는 창고인 마이몽하우스는 박홍진님의 취향에 따라 꾸밀 수가 있습니다.
        \n5.보관이나 등록을 하지 않고도 분석된 꿈을 볼 수 있습니다. 단 다시 볼 수는 없습니다.
        \n6.구독하지 않아도 관계인이나 장소등 관련 자료를 등록할 수 있습니다.
        \n7.보관된 꿈은 재생산하거나 별도 활용되지 않습니다.</string>
    <string name="notice_layout_1">꿈을 사고 판다는 것은 꿈을 꾼 박홍진님의 기운을 사고 판다는 것을 의미합니다.
일반적으로 좋은 꿈이 좋다고 생각하지만 실제로는 어떤 꿈이라기 보다는 누가 어떤 꿈을 꾼것이 더 중요합니다.
박홍진님의 꿈을 통해 받은 기운을 거래하는 곳이 마이몽스토어 입니다. 박홍진님의 기운이 많은 사람들에게 도움이 될 수 있도록
마이몽은 꿈을 분석하고 마이몽스토어와 연동하여 모든 일상 생활에 활력이 되도록 최선을 다하여 연구 개발하고 있습니다.
\n\n감사합니다. 마이몽 일동</string>
    <string name="notice_layout_2">꿈을 보관하는데 동의합니다.</string>
    <string name="notice_layout_3">나가기</string>
    <string name="notice_layout_4">꿈 분석</string>
    <string name="activity_signup_male">남성</string>
    <string name="activity_signup_female">여성</string>
    <string name="activity_mongstore_save_agree">꿈 보관에 동의합니다</string>
    <string name="activity_findid_title">아이디 찾기</string>
    <string name="activity_findid_0">이메일 입력</string>
    <string name="activity_findid_1">비밀번호를 찾기 위해서 등록된 이메일 주소를 입력해 주세요.</string>
    <string name="activity_findid_email">이메일</string>
    <string name="activity_findid_email_hint">이메일을 입력해주세요.</string>
    <string name="activity_findid_submit">아이디 찾기</string>
    <string name="activity_findid_example">예시</string>
    <string name="activity_add_user_title">사용자 생성</string>
    <string name="activity_add_user_nickname">닉네임</string>
    <string name="activity_add_user_name">이름</string>
    <string name="activity_add_user_birth">태어난 년도</string>
    <string name="activity_add_user_submit">등록</string>
</resources>