<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_tab_manage"
        android:title="@string/title_manage" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_tab_store"
        android:title="@string/title_store" />


    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_tab_findme"
        android:title="@string/title_find" />

<!--    <item-->
<!--        android:id="@+id/navigation_recommend"-->
<!--        android:icon="@drawable/ic_tab_recommend"-->
<!--        android:title="@string/title_recommend" />-->

</menu>