<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_common_bg_round"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="1dp"
        android:layout_height="40dp"
        android:background="#EFEFEF"
        android:text="@string/regist_dialog2_0"
        android:textColor="@color/mong_grey_default"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_dialog2_1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/mong_grey_default"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_dialog2_2"
        android:textSize="12sp"
        android:textColor="@color/mong_grey_default"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_dialog2_3"
        android:textSize="12sp"
        android:textColor="@color/mong_grey_default"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp"/>
    <TextView
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/regist_dialog2_4"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_round_30dp_fe9700"/>
    <TextView
        android:id="@+id/btn_negative"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/regist_dialog2_5"
        android:textColor="@color/mong_grey_default"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginVertical="15dp" />




</LinearLayout>