<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddUserActivity"
    android:orientation="vertical"
    android:background="@color/app_main_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:elevation="5dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/activity_title"
            style="@style/text_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_add_user_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

    </RelativeLayout>

    <EditText
        style="@style/text_regular"
        android:id="@+id/edt_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="19dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:hint="@string/activity_add_user_nickname"
        android:textColorHint="#96a1ae"
        android:background="@drawable/bg_round_10dp_2e323b"/>
    <EditText
        style="@style/text_regular"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="19dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:hint="@string/activity_add_user_name"
        android:textColorHint="#96a1ae"
        android:background="@drawable/bg_round_10dp_2e323b"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="30dp">
        <RadioGroup
            android:id="@+id/gender_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_signup_male"
                android:textSize="@dimen/text_size_body"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/female_radiobtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:text="@string/activity_signup_female"
                android:textSize="@dimen/text_size_body"
                android:textColor="@color/white"/>
        </RadioGroup>
    </LinearLayout>
    <EditText
        style="@style/text_regular"
        android:id="@+id/edt_birth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="19dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:hint="@string/activity_add_user_birth"
        android:inputType="number"
        android:textColorHint="#96a1ae"
        android:background="@drawable/bg_round_10dp_2e323b"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:weightSum="2">

        <TextView
            style="@style/text_regular"
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_10dp_stroke_fe9700"
            android:text="@string/str_cancel"
            android:textColor="@color/app_disable_text_color"
            android:textSize="@dimen/text_size_button"
            android:gravity="center"/>

        <TextView
            style="@style/text_regular"
            android:id="@+id/btn_setup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_round_10dp_fe9700"
            android:text="@string/activity_add_user_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>