<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/my_mong_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/txt_agree"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/activity_mongstore_save_agree"
            android:textColor="#e0e0e0"
            android:layout_margin="24dp"
            android:textSize="@dimen/text_size_body" />
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingTop="5dp"
        android:background="@color/bilnd_black"
        android:paddingBottom="5dp"
        android:layout_height="60dp">

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_layout_2"
            android:gravity="center"
            android:checked="true"
            android:textSize="@dimen/text_size_tooltip"
            android:buttonTint="#eeeeee"
            android:textColor="#eeeeee"
            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/app_main_color"
        android:layout_height="60dp">
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:text="@string/notice_layout_3"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/app_main_color"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="0dp"
            android:text="@string/notice_layout_4"
            android:background="@color/app_main_color"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>


</LinearLayout>